welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
def methode(){
	if(estFaceMur){
		if(getDirection()==Direction.OUEST){
			droite();
			if(estFaceMur){
				return true
			} else return false
		}else{
			gauche();
			if(estFaceMur){
				return true
			}else return false
		}
	}else return false
}
def serpent(){
	while(!methode){
		while(!estFaceMur){
			avance();
		if(getDirection()==Direction.EST){
			gauche();
		}else droite();
		}
	}		
}
serpent();
}
